# gigi

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/dashboard/: app.js  index.html  styles.css
src/: app.rs  args.rs  authors.rs  checkout.rs  cmd.rs  commit.rs  config.rs  dashboard.rs  dashboard_app.rs  dashboard_types.rs  db.rs  github.rs  icons.rs  init.rs  launcher.rs  lib.rs  main.rs  review.rs  serve.rs  terminal.rs  web.rs
src/db/: core.rs  dashboard.rs  migrations.rs  mod.rs  models.rs  tests.rs  util.rs
src/github/: api.rs  local_repo.rs  mod.rs  parsing.rs  types.rs
src/serve/: app.rs  helpers.rs  mod.rs  poll.rs  tests.rs  time.rs
src/workflows/: mod.rs  open.rs  repo.rs  squash.rs  test_support.rs
style/: main.css
