[package]
name = "gigi"
version = "0.1.0"
edition = "2024"
description = "A collection of git utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcoieni/gigi"

[dependencies]
anyhow = "1.0.86"
camino = "1.1.9"
git_cmd = "0.6.11"
inquire = "0.9.1"
tracing = "0.1.40"
secrecy = "0.10.3"
clap = { version = "4.5.16", features = ["derive"] }
