[package]
name = "gigi"
version = "0.1.0"
edition = "2024"
description = "A collection of git utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marcoieni/gigi"
keywords = ["git", "cli", "utilities"]
categories = ["command-line-utilities", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.86", optional = true }
camino = { version = "1.1.9", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
git_cmd = { version = "0.6.27", optional = true }
inquire = { version = "0.9.2", optional = true }
clap = { version = "4.5.16", features = ["derive"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"], optional = true }
axum = { version = "0.8.6", optional = true }
leptos = "0.8.17"
leptos_axum = { version = "0.8.8", optional = true }
any_spawner = { version = "0.3.0", optional = true }
tokio-stream = { version = "0.1.17", features = ["sync"], optional = true }
tower-http = { version = "0.6.6", features = ["fs"], optional = true }
rusqlite = { version = "0.37.0", features = ["bundled"], optional = true }
toml = { version = "0.9.8", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3.77", features = ["Event", "EventSource", "MessageEvent"], optional = true }

[features]
default = ["ssr"]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "leptos/hydrate",
]
ssr = [
    "dep:anyhow",
    "dep:any_spawner",
    "dep:axum",
    "dep:camino",
    "dep:clap",
    "dep:git_cmd",
    "dep:inquire",
    "dep:leptos_axum",
    "dep:rusqlite",
    "dep:serde_json",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:toml",
    "dep:tower-http",
    "leptos/ssr",
]

[package.metadata.leptos]
output-name = "gigi"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:8787"
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-default-features = false
lib-default-features = false

[lints.rust]
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = "warn"
unused_import_braces = "warn"

[lints.clippy]
as_underscore = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
cargo_common_metadata = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
get_unwrap = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ignore_case_cmp = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_all_any_identity = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_with_unused_argument_over_ranges = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mut_mut = "warn"
needless_as_bytes = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
ref_option_ref = "warn"
regex_creation_in_loops = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unnecessary_literal_bound = "warn"
unnecessary_map_or = "warn"
unneeded_field_pattern = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
use_self = "warn"
used_underscore_binding = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

# Allowing optional lints has no effect, but we list them to
# make clear that we reviewed them and we decided to allow them
arbitrary_source_item_ordering = "allow"
decimal_literal_representation = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
redundant_else = "allow"
